# jogos_olimpicos

./: .gitignore  Dockerfile  README.md  docker-compose.yml  local.env  manage.py  pyproject.toml
dart_throw/: apps.py  models.py  serializers.py  urls.py  views.py
dart_throw/fixtures/: dartthrow_athletes.json  dartthrow_competition.json
dart_throw/migrations/: 0001_initial.py
olympic_games/: asgi.py  settings.py  urls.py  wsgi.py
swimming/: apps.py  models.py  serializers.py  urls.py  views.py
swimming/fixtures/: swimming_athletes.json  swimming_competition.json
swimming/migrations/: 0001_initial.py  0002_add_ordering_by_value.py  0003_remove_default_timestamp_for_start_date.py
