[tool.poetry]
name = "jogos_olimpicos"
version = "0.1.0"
description = "API com competições de jogos olímpicos"
authors = ["pauloestrella <pauloestrella1994@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.7"
djangorestframework = "^3.12.4"
django-filter = "^21.1"
python-decouple = "^3.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
